--- a/app.css
+++ b/app.css
@@ -261,7 +261,11 @@ body {
     }
   }
   /*-----------------MEDIA SCREM--------------*/
+  @media screen and (max-width: 999px) {
+    
+  }
 
+  
   @media screen and (max-width: 700px) {
     header .container {
       display: flex;
@@ -301,10 +305,7 @@ body {
       flex-direction: column;
     }
    /*-----------------BOTAO--------------*/
-    .botao {
-      margin-top: 5px;
-      width: 320px;
-    }
+   
   }
   .Skate3 {
     width: 50px;
