--- a/app.css
+++ b/app.css
@@ -1,11 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600&display=swap');
+
 /*------------NAV BAR-------*/
 :root {
     --bg-body: #dff9fb;
     --bg-nav: #51447b;
     --color-nav: #f0eef3;
     --color-nav-active: #fff;
-    
+    font-family: Spilne;  
+
 }
 
 
@@ -13,18 +15,35 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
+    
 }
 
+
 body {
-    height: 20vh;
-    display: grid;
-    place-items: center;
-    font-family: inter;
+    background-color: rgb(24, 30, 31);
+    height: 100%; 
+    box-sizing: border-box;
     background-image: url(https://i.redd.it/bm1sjmso0am91.png);
     background-size: cover;
     background-repeat: no-repeat;
-   
+
+
+}
+
+.container{
+    display: flex;
+    position: static;
+    margin: 50px auto;
+    width: 50%;
     
+    align-items: center;
+    justify-content: center;
+    /* background-color: aqua; */
+    z-index: 1;
+    flex-direction: column;
+    box-sizing: border-box;
+   
 }
 
 #filter-svg {
@@ -34,9 +53,11 @@ body {
 .nav {
     position: relative;
     list-style-type: none;
+    
     display: flex;
     background-color: var(--bg-nav);
     height: 80px;
+    z-index: 1;
     border-radius: 20px;
     filter: url("#goo");
     /* border-bottom-right-radius: 20px; */
@@ -94,6 +115,7 @@ body {
         height: 0px;
         opacity: 0.2;
     }
+
     100% {
         width: 1500px;
         height: 1500px;
@@ -101,33 +123,31 @@ body {
     }
 }
 
-    /*------------LOGIN-------*/
+/*------------LOGIN-------*/
 
 .login-box {
-    position: absolute;
-    top: 50%;
-    left: 50%;
+    position: relative;
     width: 400px;
+    height: 60%;
     padding: 40px;
-    transform: translate(-50%, -50%);
     background: rgba(39, 37, 37, 0.5);
     box-sizing: border-box;
-    box-shadow:  1px 5px rgb(117, 65, 213);
-    border-radius: 40px;    
-  }
-  
-  .login-box h2 {
+    box-shadow: 1px 5px rgb(117, 65, 213);
+    border-radius: 40px;
+}
+
+.login-box h2 {
     margin: 0 0 30px;
     padding: 0;
     color: #fff;
     text-align: center;
-  }
-  
-  .login-box .user-box {
+}
+
+.login-box .user-box {
     position: relative;
-  }
-  
-  .login-box .user-box input {
+}
+
+.login-box .user-box input {
     width: 100%;
     padding: 10px 0;
     font-size: 16px;
@@ -137,28 +157,30 @@ body {
     border-bottom: 1px solid #fff;
     outline: none;
     background: transparent;
-  }
-  .login-box .user-box label {
+}
+
+.login-box .user-box label {
     position: absolute;
-    top:0;
+    top: 0;
     left: 0;
     padding: 10px 0;
     font-size: 16px;
     color: #fff;
     pointer-events: none;
     transition: .5s;
-  }
-  
-  .login-box .user-box input:focus ~ label,
-  .login-box .user-box input:valid ~ label {
+}
+
+.login-box .user-box input:focus~label,
+.login-box .user-box input:valid~label {
     top: -20px;
     left: 0;
     color: rgb(54, 182, 201);
     font-size: 12px;
-  }
-  
-  .login-box form a {
+}
+
+.login-box form a {
     position: relative;
+    left: 32%;
     display: inline-block;
     padding: 10px 20px;
     color: #ffffff;
@@ -167,44 +189,47 @@ body {
     text-transform: uppercase;
     overflow: hidden;
     transition: .5s;
-    margin-top: 40px;
+    margin: 20px 0 10px 0;
     letter-spacing: 4px
-  }
-  
-  .login-box a:hover {
+}
+
+.login-box a:hover {
     background: rgb(117, 65, 213);
     color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 5px rgb(117, 65, 213),
-                0 0 25px rgb(117, 65, 213),
-                0 0 50px rgb(117, 65, 213),
-                0 0 100px rgb(117, 65, 213);
-  }
-  
-  .login-box a span {
+        0 0 25px rgb(117, 65, 213),
+        0 0 50px rgb(117, 65, 213),
+        0 0 100px rgb(117, 65, 213);
+}
+
+.login-box a span {
     position: absolute;
+    display: flex;
     display: block;
-  }
-  
-  .login-box a span:nth-child(1) {
+}
+
+.login-box a span:nth-child(1) {
     top: 0;
     left: -100%;
     width: 100%;
     height: 2px;
-    background: linear-gradient(90deg, transparent,rgb(117, 65, 213));
+    background: linear-gradient(90deg, transparent, rgb(117, 65, 213));
     animation: btn-anim1 1s linear infinite;
-  }
-  
-  @keyframes btn-anim1 {
+}
+
+@keyframes btn-anim1 {
     0% {
-      left: -100%;
+        left: -100%;
     }
-    50%,100% {
-      left: 100%;
+
+    50%,
+    100% {
+        left: 100%;
     }
-  }
-  
-  .login-box a span:nth-child(2) {
+}
+
+.login-box a span:nth-child(2) {
     top: -100%;
     right: 0;
     width: 2px;
@@ -212,18 +237,20 @@ body {
     background: linear-gradient(180deg, transparent, rgb(117, 65, 213));
     animation: btn-anim2 1s linear infinite;
     animation-delay: .25s
-  }
-  
-  @keyframes btn-anim2 {
+}
+
+@keyframes btn-anim2 {
     0% {
-      top: -100%;
+        top: -100%;
     }
-    50%,100% {
-      top: 100%;
+
+    50%,
+    100% {
+        top: 100%;
     }
-  }
-  
-  .login-box a span:nth-child(3) {
+}
+
+.login-box a span:nth-child(3) {
     bottom: 0;
     right: -100%;
     width: 100%;
@@ -231,18 +258,20 @@ body {
     background: linear-gradient(270deg, transparent, rgb(117, 65, 213));
     animation: btn-anim3 1s linear infinite;
     animation-delay: .5s
-  }
-  
-  @keyframes btn-anim3 {
+}
+
+@keyframes btn-anim3 {
     0% {
-      right: -100%;
+        right: -100%;
     }
-    50%,100% {
-      right: 100%;
+
+    50%,
+    100% {
+        right: 100%;
     }
-  }
-  
-  .login-box a span:nth-child(4) {
+}
+
+.login-box a span:nth-child(4) {
     bottom: -100%;
     left: 0;
     width: 2px;
@@ -250,87 +279,38 @@ body {
     background: linear-gradient(360deg, transparent, rgb(117, 65, 213));
     animation: btn-anim4 1s linear infinite;
     animation-delay: .75s
-  }
-  
-  @keyframes btn-anim4 {
+}
+
+@keyframes btn-anim4 {
     0% {
-      bottom: -100%;
-    }
-    50%,100% {
-      bottom: 100%;
-    }
-  }
-  /*-----------------MEDIA SCREM--------------*/
-  @media screen and (max-width: 999px) {
-    
-  }
-
-  
-  @media screen and (max-width: 700px) {
-    header .container {
-      display: flex;
-      flex-direction: column;
-    }
-  
-    .botao {
-      margin-top: 5px;
-      width: 300px;
-    }
-  }
-
-  @media screen and (max-width: 700px) {
-     .login-box {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 280px;
-      padding: 40px;
-      transform: translate(-50%, -50%);
-      background: rgba(39, 37, 37, 0.5);
-      box-sizing: border-box;
-      box-shadow: 0 5px 20px rgba(128, 34, 230, 0.201);
-      border-radius: 10px;    
-      
-    }
-    }
-  
-    .botao {
-      margin-top: 5px;
-      width: 320px;
+        bottom: -100%;
     }
 
-  @media screen and (max-width: 320px) {
-    header .container {
-      display: flex;
-      flex-direction: column;
+    50%,
+    100% {
+        bottom: 100%;
     }
-   /*-----------------BOTAO--------------*/
-   
-  }
-  .Skate3 {
-    width: 50px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-  }
+}
 
-    /*-----------------social media--------------*/
-   .social_media{
-    position: absolute;
-    bottom: 0;
-    top: 85%;
-    left: 50%;
-    transform: translateX(-50%);
+/*-----------------MEDIA SCREM--------------*/
+
+
+
+
+/*-----------------social media--------------*/
+.social_media {
+    position: flex;
+    margin-top: 10px;
     display: flex;
-    transition:
-			border-left-width 0.3s ease,
-			border-left-color 0.3s ease;
-		border-width: icon-size;
-		border-left-color: purple;
-  }
-  
-  .social_media a{
-    display: block;
+    align-items: center;
+    justify-content: center;
+    transition: 0.3s ease;
+    border-width: icon-size;
+    border-left-color: purple;
+}
+
+.social_media a {
+    display: inline-block;
     width: 41px;
     background: #594f8d;
     height: 40px;
@@ -338,34 +318,110 @@ body {
     text-align: center;
     margin: 0 5px;
     color: #ffffff;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-  }
-  /*-----------------LOGOS--------------*/
-  .page-logo {
-    width: 200px;
-  }
-  
-  .alura-logo {
+    border-radius: 5px;
+}
+
+/*-----------------LOGOS--------------*/
+
+.alura-logo {
     width: 80px;
     position: absolute;
     top: 5px;
     right: 10px;
-  }
-                /*sadasdaas*/      
+}
 
-  .logo {
+/*sadasdaas*/
+
+.logo {
     width: 200px;
-  }
-  
-  .logo {
     width: 40px;
     position: absolute;
     top: 5px;
     left: 10px;
-  }
+}
+
+.botao{
+    display: none;
+}
 
 
 
+/*  dispositivos pequenos (celulares em posição paisagem, menos de 768px) */
 
-  
+@media (max-width: 600px) {  
+
+    .nav {
+        height: 55px;
+        display: flex;
+        border-radius: 20px;
+
+    }
+    
+    .nav li a {
+        width: 88px;
+        height: 100%;
+        display: inline-grid;
+        place-items: center;
+        font-size: 20px;
+    }
+    
+    .nav li a .title {
+        display: none;
+    }
+    
+    
+    .nav li a.nav-item-active {
+        transform: translateY(-1%);
+        
+        font-size: 20px;
+        transition: transform 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+    
+    .nav li a.nav-item-active .title {
+        font-size: 12px;
+    }
+    
+    .nav .nav-indicator {
+        width: 0px;
+        height: 0px;
+        border-radius: 50%;
+        top: -35px;
+        left: calc(300px - 45px);
+        
+    }
+
+
+    .login-box{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        width: auto;
+        
+    }
+
+    .login-box form a {
+        left: 25%;
+        font-size: 12px;
+    }
+
+    .login-box .user-box input{
+        font-size: 12px;
+    }
+
+    body{
+        background-color: rgb(24, 30, 31);
+        
+    }
+}
+
+/* dispositivos médios (tablets, menos de 992px) */
+
+@media (max-width: 992px) {  }
+
+/* dispositivos grandes (desktops, menos de 1200px) */
+
+@media (max-width: 1200px) {  }
+
+/*  dispositivos extra grandes (desktops grandes)
+
+1200px ou mais, não tem breakpoint */
